Wed Jun  3 22:13:05 HST 1998  Greg Lee <lee@hawaii.edu>

	* AWE vibrato
	* chorus depth and reverberation
	* lyrics

Mon Jun  1 19:20:00 HST 1998  Greg Lee <lee@hawaii.edu>

	* AWE filters

Fri May 29 15:12:00 HST 1998  Greg Lee <lee@hawaii.edu>

	* merged in my version of TiMidity -- many changes

Sun Jan 18 08:39:01 1998  Bernd Johannes Wuebben  <wuebben@math.cornell.edu>

	* kmidi.cpp: various internal fixes and improvments

Sun Sep 21 15:51:34 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* fought with autconf to get support for 

	  Linux
	  FreeBSD
	  DEC OSF/1
	  HP_UX
	  SUN
	  SUN SOLARIS

	 going. Imporved docs, bug fixes.

Wed Jul 23 21:45:52 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* fixed playlist bugs.

Sun Jul 20 20:14:38 1997  Bernd Johannes Wuebben  <wuebben@petit.cornell.edu>

	* autoplay of commandline midis ( useful for netscape )
	* replace of '_'  with ' ' and  chop off .mid and .MID extensions in the
	  file name display.
