@@ -1,2 +1,2 @@
-#define KMIDIVERSION "0.4"
+#define KMIDIVERSION "1.1"
 #define TIMID_VERSION "0.2i"
